--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/swagger": "^7.4.0",
+    "@nestjs/throttler": "^6.1.1",
     "@prisma/client": "^5.18.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
