--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,7 @@ report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 # Prisma migrate file
 prisma/migrations
 prisma/migrations/*
+
+# ignore directory
+ignore
+ignore/*
