--- a/package.json
+++ b/package.json
@@ -31,11 +31,15 @@
     "@nestjs/swagger": "^7.4.0",
     "@nestjs/throttler": "^6.1.1",
     "@prisma/client": "^5.18.0",
+    "adm-zip": "^0.5.16",
+    "exifreader": "^4.23.5",
+    "log4js": "^6.9.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "unzipper": "^0.12.3"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -43,12 +47,16 @@
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
     "@quramy/prisma-fabbrica": "^2.2.1",
+    "@types/adm-zip": "^0.5.5",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
+    "@types/log4js": "^2.3.5",
+    "@types/multer": "^1.4.12",
     "@types/node": "^20.14.15",
     "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
     "@types/supertest": "^6.0.0",
+    "@types/unzipper": "^0.10.10",
     "@typescript-eslint/eslint-plugin": "^7.0.0",
     "@typescript-eslint/parser": "^7.0.0",
     "eslint": "^8.42.0",
