--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@prisma/client": "^5.18.0",
     "adm-zip": "^0.5.16",
     "exifreader": "^4.23.5",
+    "express-list-endpoints": "^7.1.0",
     "log4js": "^6.9.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
